components/automate-ui/src/app/page-components/insight-attributes-dropdown/insight-attributes-dropdown.component.scss
@import "~styles/variables";
@import "@carbon/layout/scss/layout";
@import "@carbon/grid/scss/grid";

:host {
  @extend .bx--grid;
  position: absolute;
  top: calc(100% + #{$spacing-03});
  right: 0;
  padding: $spacing-05;
  width: 100%;
  border-radius: $spacing-03;
  background: $chef-white;
  box-shadow: $spacing-03 $spacing-03 24px 0 rgba(197, 199, 209, 0.6);

  @include carbon--breakpoint-up(md) {
    max-width: 467px;
  }

  .bx--row {
    margin-left: 0;
    margin-right: 0;

    &.action-button-row {
      justify-content: space-between;
      margin-top: $spacing-03;
    }
  }

  .instruction {
    margin: 0;
  }

  ul {
    columns: 2;
    list-style-type: none;
    padding: 0;
    margin-top: 15px;
    margin-bottom: 0;

    .filter-button-container {
      width: 100%;
      padding-left: 0;
      padding-right: 0;

      @include carbon--breakpoint-up(md) {
        width: 50%;
        padding-left: $spacing-02;
        padding-right: $spacing-02;
      }
    }

    .filter-button {
      margin-bottom: $spacing-03;
      padding: 0;
      border: 1px solid $chef-grey;
      border-radius: $chef-border-radius;
      overflow: hidden;
      cursor: pointer;

      .check {
        visibility: hidden;
        color: $chef-primary-bright;
      }

      span {
        display: flex;
        justify-content: space-between;
        padding: 7px $spacing-05 5px;
        width: 100%;
        height: 100%;
        background: $chef-white;
        font-size: $spacing-04;
        pointer-events: none;
      }

      // selected styles
      &.selected {
        border: 1px solid $chef-primary-bright;

        .check {
          visibility: visible;
        }
      }
    }
  }
}

